# chorus

./: .env.example  .gitignore  README.md  cli.py  graph.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
agents/: nodes.py
chorus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/: config.py  errors.py  graph_runtime.py  logging_utils.py  models.py  node_runtime.py  prompt_builders.py  runner.py  schemas.py  skills.py  state.py
db/: database.py  operations.py
docs/: handoff-2026-04-10.md  local-testing.md
docs/superpowers/plans/: 2026-04-10-chorus-api-ui.md  2026-04-10-general-code-hygiene-review-implementation.md
docs/superpowers/specs/: 2026-04-10-general-code-hygiene-review-design.md
llm/: routing.py
tests/: test_cli.py  test_db.py  test_errors.py  test_graph.py  test_graph_runtime.py  test_nodes.py  test_prompt_builders.py  test_routing.py  test_runner.py  test_schemas.py  test_services.py  test_skills.py  test_web.py
web/: __init__.py  app.py  renderers.py  schemas.py  services.py
web/static/: app.js  styles.css
web/templates/: index.html
