[project]
name = "chorus"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "instructor>=1.7,<2",
    "jinja2>=3.1,<4",
    "langgraph>=0.2,<2",
    "langgraph-checkpoint-sqlite>=1.0",
    "litellm>=1.56,<2",
    "pydantic-settings>=2.0,<3",
    "sqlmodel>=0.0.21,<1",
    "tenacity>=8.5,<10",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "mypy>=1.10,<2",
    "pytest>=8.0,<10",
    "pytest-cov>=5.0,<7",
    "ruff>=0.6,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "web*", "llm*", "db*", "agents*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "B008",   # do not perform function calls in default arguments (FastAPI Depends pattern)
    "E501",   # line too long — not enforced, prompt strings and test assertions are exempt
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["venv/*", "tests/*"]

[tool.coverage.report]
show_missing = true
